// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PositionsTimeline renders only first 3 by default 1`] = `
<DocumentFragment>
  <ul
    class="ant-timeline"
  >
    <li
      class="ant-timeline-item"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-blue"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div />
        <div>
          <span>
            Inst 1
          </span>
        </div>
      </div>
    </li>
    <li
      class="ant-timeline-item"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-blue"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div />
        <div>
          <span>
            Inst 2
          </span>
        </div>
      </div>
    </li>
    <li
      class="ant-timeline-item ant-timeline-item-last"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-blue"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div />
        <div>
          <span>
            Inst 3
          </span>
        </div>
      </div>
    </li>
  </ul>
  <button
    class="__SecondaryButton__"
    type="button"
  >
    Show all positions (6)
  </button>
</DocumentFragment>
`;

exports[`PositionsTimeline renders with positions 1`] = `
<DocumentFragment>
  <ul
    class="ant-timeline"
  >
    <li
      class="ant-timeline-item"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-blue"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div>
          1990-1994
        </div>
        <div>
          <strong>
            UNDERGRADUATE, 
          </strong>
          <span>
            Inst 1
          </span>
        </div>
      </div>
    </li>
    <li
      class="ant-timeline-item"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-blue"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div>
          1994-2000
        </div>
        <div>
          <strong>
            PHD, 
          </strong>
          <span>
            Inst 2
          </span>
        </div>
      </div>
    </li>
    <li
      class="ant-timeline-item ant-timeline-item-last"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-blue"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div>
          2000-present
        </div>
        <div>
          <strong>
            STAFF, 
          </strong>
          <span>
            CERN
          </span>
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`PositionsTimeline renders with single position 1`] = `
<DocumentFragment>
  <ul
    class="ant-timeline"
  >
    <li
      class="ant-timeline-item ant-timeline-item-last"
    >
      <div
        class="ant-timeline-item-tail"
      />
      <div
        class="ant-timeline-item-head ant-timeline-item-head-blue"
      />
      <div
        class="ant-timeline-item-content"
      >
        <div>
          present
        </div>
        <div>
          <strong>
            UNDERGRADUATE, 
          </strong>
          <span>
            Inst 1
          </span>
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;
